# docs/swagger.json
@@ -80,7 +80,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.CreateRecordRequest"
+                            "$ref": "#/definitions/record.CreateRecordRequest"
                         }
                     }
                 ],
@@ -173,7 +173,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UpdateRecordRequest"
+                            "$ref": "#/definitions/record.UpdateRecordRequest"
                         }
                     }
                 ],
@@ -245,48 +245,6 @@
         }
     },
     "definitions": {
-        "dto.CreateRecordRequest": {
-            "type": "object",
-            "required": [
-                "display_name",
-                "url"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string",
-                    "example": "This is description"
-                },
-                "display_name": {
-                    "type": "string",
-                    "example": "name"
-                },
-                "url": {
-                    "type": "string",
-                    "example": "/url"
-                }
-            }
-        },
-        "dto.UpdateRecordRequest": {
-            "type": "object",
-            "required": [
-                "display_name",
-                "url"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string",
-                    "example": "This is a description"
-                },
-                "display_name": {
-                    "type": "string",
-                    "example": "name"
-                },
-                "url": {
-                    "type": "string",
-                    "example": "/url"
-                }
-            }
-        },
         "models.Record": {
             "type": "object",
             "properties": {
@@ -321,6 +279,48 @@
                     "description": "Url of a record",
                     "type": "string",
                     "example": "/record/learning-go"
+                }
+            }
+        },
+        "record.CreateRecordRequest": {
+            "type": "object",
+            "required": [
+                "display_name",
+                "url"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "example": "This is description"
+                },
+                "display_name": {
+                    "type": "string",
+                    "example": "name"
+                },
+                "url": {
+                    "type": "string",
+                    "example": "/url"
+                }
+            }
+        },
+        "record.UpdateRecordRequest": {
+            "type": "object",
+            "required": [
+                "display_name",
+                "url"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "example": "This is a description"
+                },
+                "display_name": {
+                    "type": "string",
+                    "example": "name"
+                },
+                "url": {
+                    "type": "string",
+                    "example": "/url"
                 }
             }
         },
